# Excelerate-Desktop

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  FABLE_PLAN.md  PLAN.md  README.md  TODO.md  doctor.config.json  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: parser-author.md  supabase-migration.md  tauri-command-author.md
.claude/commands/: add-tauri-command.md  new-migration.md  new-parser.md  run-checks.md
.github/workflows/: ci.yml  commitlint.yml  react-doctor.yml  release-please.yml  release.yml
docs/: database.md  local-dev.md  parsers.md  tauri-commands.md
examples/: clear_view_parser.py
pro-examples/bars-1/: App.tsx
pro-examples/bars-2/: App.tsx
pro-examples/bars-3/: App.tsx
pro-examples/bars-4/: App.tsx
pro-examples/circles-1/: App.tsx
pro-examples/circles-2/: App.tsx
pro-examples/circles-3/: App.tsx
pro-examples/circles-4/: App.tsx
pro-examples/circles-5/: App.tsx
pro-examples/circles-6/: App.tsx
pro-examples/graph-1/: App.tsx
pro-examples/graph-2/: App.tsx
pro-examples/kpi-stat-1/: App.tsx
pro-examples/kpi-stat-2/: App.tsx
python-api/: main.py  pyproject.toml
python-api/excelerate_api/: __init__.py
python-api/excelerate_api/api/: file_processing.py  portfolio.py
src/: app.tsx  index.css  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
supabase/: config.toml  seed.sql
tools/: db-local.sh  db-wipe-local.sh  dev-local.sh
(+191 files in other folders)
