[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excelerate-api"
version = "0.1.0"
description = "FastAPI backend for Excelerate Desktop application"
requires-python = ">=3.9"
authors = [
    {name = "Calum Siemer"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.2",
    "chardet>=5.1.0",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.1.5",
    "mypy>=1.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["excelerate_api"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["excelerate_api"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]